--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Ludum Dare 48 #24</h1>
+        <h1>Ludum Dare 48h #24</h1>
         <h2>Evolution</h2>
         <a href="https://github.com/vircung/" class="button"><small>View project on</small>GitHub</a>
       </div>
@@ -46,6 +46,9 @@
           <h1>About</h1>
           <p>
             This game is about evolution in some part.
+          </p>
+          <p>
+            As i develop the game i'll update this page.
           </p>
 
           <h1>The Game</h1>
