--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="inner">
         <h1>Ludum Dare 48h #24</h1>
         <h2>Evolution</h2>
-        <a href="https://github.com/vircung/" class="button"><small>View project on</small>GitHub</a>
+        <a href="https://github.com/vircung/LD48-24-Evolution" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
 
@@ -83,7 +83,7 @@
              Game
            </a>
          </a>
-         <p class="repo-owner"><a href="https://github.com/vircung/Unity-LD24"></a> is maintained by <a href="https://github.com/vircung">vircung</a>.</p>
+         <p class="repo-owner"><a href="https://github.com/vircung/LD48-24-Evolution"></a> is maintained by <a href="https://github.com/vircung">vircung</a>.</p>
        </div>
 
        <!-- Builds updates Atom feed -->
