First Iteration. Classes and gameplay.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </p>
 
           <h1>The Game</h1>
-          <p>The are no bulds yet, so no game yet.
+          <p>There is something, you can play it.
           </p>
 
           <div class="content">
