--- a/index.html
+++ b/index.html
@@ -106,16 +106,21 @@
 
        <p>
         <p class="repo-owner">Build updates</p>
-        <script type='text/javascript' charset='utf-8' src='http://scripts.hashemian.com/jss/feed.js?print=yes&numlinks=4&summarylen=&seedate=no&popwin=no&url=https:%2F%2Fgithub.com%2Fvircung%2FLD48-24-Evolution%2Fcommits%2Fbuilds.atom'></script>
+        <script type='text/javascript' charset='utf-8' src='http://scripts.hashemian.com/jss/feed.js?print=yes&numlinks=10&summarylen=0&seedate=yes&popwin=no&url=https:%2F%2Fgithub.com%2Fvircung%2FLD48-24-Evolution%2Fcommits%2Fmaster.atom'></script>
       </p>
       <!-- Source updates Atom feed -->
 
       <p>
         <p class="repo-owner">Source updates</p>
-        <script type='text/javascript' charset='utf-8' src='http://scripts.hashemian.com/jss/feed.js?print=yes&numlinks=4&summarylen=100&seedate=no&popwin=yes&url=https:%2F%2Fgithub.com%2Fvircung%2FLD48-24-Evolution%2Fcommits%2Fmaster.atom'></script>
+        <script type='text/javascript' charset='utf-8' src='http://scripts.hashemian.com/jss/feed.js?print=yes&numlinks=10&summarylen=0&seedate=yes&popwin=no&url=https:%2F%2Fgithub.com%2Fvircung%2FLD48-24-Evolution%2Fcommits%2Fmaster.atom'></script>
       </p>
 
       <!-- Site updates Atom feed -->
+
+      <p>
+        <p class="repo-owner">Page updates</p>
+        <script type='text/javascript' charset='utf-8' src='http://scripts.hashemian.com/jss/feed.js?print=yes&numlinks=10&summarylen=0&seedate=yes&popwin=no&url=https:%2F%2Fgithub.com%2Fvircung%2FLD48-24-Evolution%2Fcommits%2Fmaster.atom'></script>
+      </p>
 
     </aside>
   </div>
